fixed script alignment

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1 {
 	font-weight: normal;
 	font-size: 3em;
 	margin: 0;
+	margin-left: -0.05em;
 	/*margin-top: 0.5em;*/
 	line-height: 0.8;
 	/*color: #0E2CB3;*/
@@ -86,6 +87,7 @@ h3 {
 	font-size: 2em;
 	margin: 0;
 	margin-top: 0.5em;
+	margin-left: -0.1em;
 	/*color: #0E2CB3;*/
 }
 
